ec2-rds-exercise/securitygroups.yml
Description: This template contains the security groups required by all Infrastructure
Parameters:
  EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String
  VPC:
    Description: The VPC id create for project's infrastructure
    Type: AWS::EC2::VPC::Id

Resources:

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup        
    Properties:
        GroupDescription: Open database for access
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0          
          - IpProtocol: tcp
            FromPort: 3306
            ToPort: 3306
            CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0          
          - IpProtocol: tcp
            FromPort: 3306
            ToPort: 3306
            CidrIp: 0.0.0.0/0
        GroupName: !Sub ${EnvironmentName} EC2 SecurityGroup
        Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} EC2 SecurityGroup

# Outputs
Outputs:
  ECSG:
    Description: A reference to the security group for ECS hosts
    Value: !Ref EC2SecurityGroup
